fixing table align

--- a/views/stylesheets/screen.scss
+++ b/views/stylesheets/screen.scss
@@ -32,6 +32,10 @@ body {
 
 }
 
+table {
+  margin: 0 auto;
+}
+
 i {
   font-size: 4em;
   padding: 0.2em;
